--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-django
-dash
+#django
+#dash
 pandas
 matplotlib
 mysqlclient
 seaborn
 pillow
-django_plotly_dash
+#django_plotly_dash 
+Django==4.2.11 --no-cache-dir
+dash==2.10.2 --no-cache-dir
+django-plotly-dash --no-cache-dir
 dpd_static_support
 dash_mantine_components
 pymysql
